--- a/configuration.properties
+++ b/configuration.properties
@@ -9,6 +9,7 @@ faceUrl=https://www.facebook.com
 youtubeUrl= https://www.youtube.com
 sauceDemoUrl = https://www.saucedemo.com/
 herokuUrl = https://the-internet.herokuapp.com/add_remove_elements/
+aeUrl = https://automationexercise.com/
 
 qdGecerliUsername = anevzatcelik@gmail.com
 qdGecerliPassword = Nevzat152032
