--- a/configuration.properties
+++ b/configuration.properties
@@ -10,6 +10,7 @@ youtubeUrl= https://www.youtube.com
 sauceDemoUrl = https://www.saucedemo.com/
 herokuUrl = https://the-internet.herokuapp.com/add_remove_elements/
 aeUrl = https://automationexercise.com/
+guruUrl = http://demo.guru99.com/test/web-table-element.php
 
 qdGecerliUsername = anevzatcelik@gmail.com
 qdGecerliPassword = Nevzat152032
